Kubernetes/home/adguardhome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: adguard-home
  name: adguard-home
  namespace: home
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      io.kompose.service: adguard-home
  template:
    metadata:
      labels:
        io.kompose.service: adguard-home
    spec:
      hostNetwork: true
      containers:
        - env:
            - name: TZ
              value: Europe/Warsaw
          image: adguard/adguardhome:v0.107.68
          name: adguard-home
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /opt/adguardhome/work
              subPath: work
              name: adguard-home-data
            - mountPath: /opt/adguardhome/conf
              subPath: conf
              name: adguard-home-data
      restartPolicy: Always
      volumes:
        - name: adguard-home-data
          persistentVolumeClaim:
            claimName: adguard-home-data
        - name: adguard-home-config
          configMap:
            name: adguard-home-config
