Kubernetes/home/adguardhome/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: home
spec:
  ports:
    - port: 53
      nodePort: 53
      name: dns-tcp
    - port: 53
      nodePort: 53
      name: dns-udp
      protocol: UDP
  selector:
    io.kompose.service: adguard-home
