Kubernetes/home/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: home
spec:
  ports:
    - port: 3000
      name: web
    - port: 53
      name: dns-tcp
    - port: 53
      name: dns-udp
      protocol: UDP
  selector:
    io.kompose.service: adguard-home
