Kubernetes/home/adguardhome/ingressDnsTcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-home-dns-tcp
  namespace: home
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: adguard-home
          port: 53
