Kubernetes/home/adguardhome/ingressWeb.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-home-web
  namespace: home
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^dns\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: adguard-home
          port: 3000
